--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet"
         />
+        <script src="https://kit.fontawesome.com/042e9b1656.js" crossorigin="anonymous"></script>
         <title>Siesta Restaurant</title>
     </head>
     <body>
